4.0.31 - Fix chat infinite scroll, improve scrollbars

--- a/frontend-v5/src/assets/index.css
+++ b/frontend-v5/src/assets/index.css
@@ -1,9 +1,5 @@
 @tailwind base;
 @tailwind components;
-* {
-    scrollbar-width: thin;
-    scrollbar-color: #202020 rgb(16, 17, 19);
-}
 
 *::-webkit-scrollbar {
     width: 8px;
